# entity-compliance-tracker

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.railway  PACKAGE_NAMING.md  README.md  docker-compose.yml  pyproject.toml  railway.json  railway_start.sh  start.bat  start.sh
data/sample/: entities.json  relationships.json
ect_app/: config.py  database.py  main.py
ect_app/models/: __init__.py  document.py  entity.py  filing.py  notification.py  officer.py  relationship.py
ect_app/notifications/: email_sender.py  scheduler.py  slack_sender.py
ect_app/notifications/templates/: reminder_email.html
ect_app/routers/: dashboard.py  documents.py  entities.py  filings.py  notifications.py  officers.py  relationships.py  shutdown.py
ect_app/schemas/: dashboard.py  document.py  entity.py  filing.py  notification.py  officer.py  relationship.py
ect_app/services/: dashboard_service.py  document_service.py  entity_service.py  filing_service.py  notification_service.py  officer_service.py  relationship_service.py  seed_service.py
ect_frontend/: app.py
ect_frontend/components/: org_chart.py
ect_frontend/pages/: 1_Dashboard.py  2_Entity_Registry.py  3_Compliance_Calendar.py  4_Org_Chart.py  5_Settings.py
ect_frontend/utils/: api_client.py  formatters.py
tests/: conftest.py  test_entities.py  test_filings.py  test_relationships.py
